# climm

./: .cvsignore  AUTHORS  CHANGELOG  COPYING  COPYING-old  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  NEWS  README  Readme_SOCKS5  TODO  acinclude.m4  aclocal.m4  climm.info  climm.spec  commands.txt  configure  configure.ac  configure.in  micq.1  micq.info  micq.spec  prepare  release
autopackage/: climm.apspec.in  micq.apspec.in
build-aux/: prepare  release
contrib/: logconv.tcl  logmod.tcl
debian/: changelog  control  copyright  docs  menu  rules
doc/: Makefile.am  Makefile.in  README  README.BeOS  README.NONLINUX  README.SOCKS5  README.i18n  README.logformat  README.ssl  README.tcl  climm.1  climm.desktop  climm.xpm  climmcmds.7  climmrc.5  example-climm-event-script  example-micq-event-script  icq091.txt  icqv7.txt  micq.1  micq.7  micq.de.1  micq.de.7  micq.desktop  micq.xpm  micqrc.5
doc/de/: Makefile.am  climm.1  climmcmds.7  climmrc.5  micq.1  micq.7  micqrc.5
doc/es/: Makefile.am  climm.1  climmcmds.7  climmrc.5  micq.1  micq.7  micqrc.5
doc/fr/: Makefile.am  climm.1  climmcmds.7  climmrc.5  micq.1  micq.7  micqrc.5
doc/it/: Makefile.am  climm.1  micq.1
doc/pt_BR/: Makefile.am  climm.1  climmcmds.7  climmrc.5  micq.1  micq.7  micqrc.5
doc/ru/: Makefile.am  climm.1  climmcmds.7  climmrc.5  micq.1  micq.7  micqrc.5
doc/se/: climm.1  climmcmds.7  climmrc.5
doc/sk/: Makefile.am  climm.1  climmcmds.7  climmrc.5  micq.1  micq.7  micqrc.5
doc/sr/: Makefile.am  climm.1  climmcmds.7  climmrc.5  micq.1  micq.7  micqrc.5
doc/uk/: Makefile  Makefile.am  Makefile.in  climm.1  climmcmds.7  micq.1  micq.7
include/: .cvsignore  Makefile.am  beos.h  buildmark.h  climm.h  climmconfig.h  cmd_pkt_cmd_v5.h  cmd_pkt_cmd_v5_util.h  cmd_pkt_server.h  cmd_pkt_v8.h  cmd_pkt_v8_flap.h  cmd_pkt_v8_snac.h  cmd_pkt_v8_tlv.h  cmd_user.h  color.h  config.h  config.h.in  connection.h  contact.h  contactopts.h  conv.h  datatype.h  file_util.h  i18n.h  icq_response.h  icq_tcp.h  icq_v2.h  icq_v4.h  icq_v5.h  im_icq8.h  im_request.h  im_response.h  jabber_base.h  lang.h  micq.h  micqconfig.h  mreadline.h  mselect.h  msg_queue.h  msn_base.h  (+49 more)
include/io/: io_dns.h  io_fifo.h  io_gnutls.h  io_openssl.h  io_private.h  io_socks5.h  io_tcp.h
lang/: .cvsignore  C.i18n  Makefile  Makefile.am  Makefile.in  README.i18n  README.internationalization  bg.i18n  br.i18n  brazil.h  build.i18n  bulgarian.h  chinese.h  cn.i18n  croatian.h  cs.i18n  de.i18n  de@fun.i18n  de_CH.i18n  de_fun.i18n  dutch.h  en.i18n  en@fun.i18n  en_fun.i18n  english.h  es.i18n  fi.i18n  finnish.h  fr.i18n  french.h  german.h  hr.i18n  i18n-extract  i18n-format  i18n-number  i18n-template  id.i18n  indonesian.h  it.i18n  italian.h  (+25 more)
m4/: binreloc.m4  libgcrypt.m4  libgnutls.m4
replace/: memmove.c  memmove.h  snprintf.c  snprintf.h  timegm.c
src/: .cvsignore  .indent.pro  Makefile  Makefile.am  Makefile.in  autopackage_prefix.c  beos.c  buildmark.c  char_conv.c  climm.c  cmd_pkt_cmd_v5.c  cmd_pkt_cmd_v5_util.c  cmd_pkt_server.c  cmd_pkt_v8.c  cmd_pkt_v8_flap.c  cmd_pkt_v8_snac.c  cmd_pkt_v8_tlv.c  cmd_user.c  connection.c  contact.c  contactopts.c  conv.c  conv_jp.c  conv_rus.c  file_util.c  i18n.c  icq_response.c  icqprx.c  icqsyn.c  im_icq8.c  im_request.c  im_response.c  jabber_base.cpp  jp_conv.c  micq.c  mreadline.c  mselect.c  msg_queue.c  msn_base.cpp  network.c  (+51 more)
src/io/: io_dns.c  io_fifo.c  io_gnutls.c  io_openssl.c  io_socks5.c  io_tcp.c
